# otp-cop

./: Cargo.toml  README.rst
.github/: dependabot.yml
src/: aws.rs  github.rs  lib.rs  main.rs  service.rs  slack.rs
