[package]
name = "otp-cop"
version = "0.1.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
repository = "https://github.com/alex/otp-cop"
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
getopts = "*"
reqwest = { version = "*", features = ["rustls-tls"], default-features = false }
serde = "*"
serde_derive = "*"
serde_json = "*"
term = "*"
