[package]
name = "otp-cop"
version = "0.1.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
repository = "https://github.com/alex/otp-cop"
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
getopts = "0.2"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking"], default-features = false }
serde = "1"
serde_derive = "1"
serde_json = "1"
term = "0.7"
